ended the authetification and added the button logout

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,8 +4,12 @@ security:
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+        our_db_provider:
+            entity:
+                class: AppBundle:User
+                property: username
+                # if you're using multiple entity managers
+                # manager_name: customer
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -18,6 +22,10 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+            provider: our_db_provider
+            logout:
+                path: /logout
+                target: /
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
@@ -27,3 +35,8 @@ security:
             #form_login: ~
     encoders:
         AppBundle\Entity\User: bcrypt
+
+    access_control:
+        - { path: '^/login', roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: '^/', roles: ROLE_USER }
+        - { path: '^/restaurantes/new', roles: ROLE_ADMIN }
