--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -37,6 +37,6 @@ security:
         AppBundle\Entity\User: bcrypt
 
     access_control:
-        - { path: '^/login', roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/(login|registro), roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: '^/', roles: ROLE_USER }
         - { path: '^/restaurantes/new', roles: ROLE_ADMIN }
